src/test/deca/syntax/invalid/SansObjet/WhileFaute.deca
//Description
//  test de melange field et expr dans methode
//
//Réponse
//  Erreur syntaxique ligne 9
//  no viable alternative at input '{'

{
    wile (true) {
        println(5);
    }
}